fix carousel spacing on mobile

--- a/themes/brian_theme/assets/css/custom.css
+++ b/themes/brian_theme/assets/css/custom.css
@@ -9,7 +9,7 @@
   background-color: #444;
 }
 
-.carousel .carousel-column {
+.carousel .carousel-right-column {
     height: 240px;
     max-height: 240px;
 }
